[gd_scene load_steps=9 format=3 uid="uid://cc5wxcolrcygx"]

[ext_resource type="Script" path="res://maps/utilities/InGameSettings.gd" id="1_5bpkl"]
[ext_resource type="Texture2D" uid="uid://bdjfdyjualfpi" path="res://assets/icons/red-cross.png" id="2_27678"]
[ext_resource type="FontData" uid="uid://bfaxywek0j4u3" path="res://assets/fonts/Kenney Future Narrow.ttf" id="3_g5je4"]
[ext_resource type="PackedScene" uid="uid://bjbnw0boxo2n4" path="res://maps/utilities/ChangeKey.tscn" id="4_asf0w"]
[ext_resource type="PackedScene" uid="uid://etxqif1ksvut" path="res://maps/utilities/exit.tscn" id="5_8o7lv"]

[sub_resource type="Font" id="Font_ger8x"]
data/0 = ExtResource( "3_g5je4" )

[sub_resource type="Font" id="Font_rnb4a"]
data/0 = ExtResource( "3_g5je4" )

[sub_resource type="Font" id="Font_elt0n"]
data/0 = ExtResource( "3_g5je4" )

[node name="InGameSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_5bpkl" )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -186.0
offset_right = 189.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="LeaveMenu" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -35.0
offset_bottom = 35.0
grow_horizontal = 0
icon = ExtResource( "2_27678" )
expand_icon = true
metadata/_edit_layout_mode = 1

[node name="LeaveGamePopup" type="Button" parent="Panel"]
offset_left = 18.0
offset_top = 334.0
offset_right = 96.0
offset_bottom = 365.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource( "Font_ger8x" )
text = "Quitter"

[node name="TabContainer" type="TabContainer" parent="Panel"]
offset_left = 16.0
offset_top = 34.0
offset_right = 364.0
offset_bottom = 333.0

[node name="Generals" type="Control" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/TabContainer/Generals"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = SubResource( "Font_rnb4a" )
text = "
  Volume :

"
metadata/_edit_layout_mode = 1

[node name="HSlider" type="HSlider" parent="Panel/TabContainer/Generals"]
offset_left = 148.0
offset_top = 17.0
offset_right = 315.0
offset_bottom = 40.0
rounded = true
ticks_on_borders = true

[node name="Graphics" type="Control" parent="Panel/TabContainer"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Keyboard" type="Control" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/TabContainer/Keyboard"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = SubResource( "Font_elt0n" )

[node name="ItemList" type="ItemList" parent="Panel/TabContainer/Keyboard/RichTextLabel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ChangeKey" parent="Panel" instance=ExtResource( "4_asf0w" )]
visible = false

[node name="Exit" parent="Panel" instance=ExtResource( "5_8o7lv" )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -84.5
offset_right = 137.0
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="pressed" from="Panel/LeaveGamePopup" to="." method="_on_leave_game_popup_pressed"]
[connection signal="item_activated" from="Panel/TabContainer/Keyboard/RichTextLabel/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
